# cmedit

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  cabal.project  cmedit.cabal
.github/workflows/: cla.yml
app/: Main.hs
cbits/: cmedit_term.c
packaging/: build-deb.sh  cmedit.1  copyright
platform/posix/Cmedit/: Term.hs
platform/windows/Cmedit/: Term.hs
src/Cmedit/: About.hs  Ansi.hs  App.hs  Browser.hs  Caps.hs  Clipboard.hs  ConfigFile.hs  Csv.hs  Definition.hs  Dialog.hs  Editor.hs  EditorDoc.hs  EditorEdit.hs  EditorFind.hs  EditorState.hs  Gfx.hs  Help.hs  HelpCard.hs  Image.hs  Input.hs  Link.hs  Lint.hs  Manual.hs  Menu.hs  QuickOpen.hs  Regex.hs  Render.hs  Search.hs  Syntax.hs  Term.hs  TextBuffer.hs  Types.hs  Width.hs
test/: Spec.hs
website/: README.md  index.html  whitepaper.html
